--- a/src/style.css
+++ b/src/style.css
@@ -72,7 +72,7 @@ body {
   width: inherit;
 }
 
-.name-input {
+.user-input {
   border-radius: 0%;
   margin-bottom: 15px;
   border: 3px solid #000;
